# olio-ohjelmointi

viikko1/: main.cpp
viikko2/: game.cpp  game.h  main.cpp
viikko3/: CMakeLists.txt  kokki.h  main.cpp
viikko4/: CMakeLists.txt  main.cpp
viikko5/: CMakeLists.txt  main.cpp
viikko6/: CMakeLists.txt  main.cpp
viikko7teht1/: calculator.cpp  calculator.h  calculator.ui
viikko7teht2/: CMakeLists.txt  calculator.cpp  calculator.h  calculator.ui
